--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-gradio
-sentence-transformers
-torch
-numpy
-groq
-openai
+gradio==4.44.0
+python-dotenv==1.0.0
+groq==0.11.0
+openai==1.0.0
+numpy==1.24.0
